Archive2/dc/5c045430c8c356/output
main.cpp:5:1: error: cannot combine with previous 'type-name' declaration specifier
struct foo;
^
main.cpp:5:11: error: expected ',' or '>' in template-parameter-list
struct foo;
          ^
main.cpp:5:11: warning: declaration does not declare anything [-Wmissing-declarations]
struct foo;
          ^
1 warning and 2 errors generated.
