Archive2/dc/5c045430c8c356/main.cpp
template <int I>
using overload = int;

template <overload<0>=0>
struct foo;

int main() {}